# Sensor-Bridge

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRODUCTIONIZE.md  README.md  justfile
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/images/: pipeline.dot
benches/: allocations.rs  channels.rs  pipeline.rs  ring_buffer.rs
docs/: ARCHITECTURE.md  DRIVERS.md  PERFORMANCE.md  ROADMAP.md
examples/: benchmark_latency.rs  full_pipeline.rs  imu_fusion.rs  metrics_demo.rs  multi_sensor.rs  simple_imu.rs  udp_demo.rs
scripts/: mock_udp_sender.py  requirements.txt
src/: config.rs  error.rs  lib.rs  math.rs  timestamp.rs
src/backpressure/: controller.rs  mod.rs  rate_limiter.rs  strategy.rs
src/buffer/: cache_padded.rs  mod.rs  ring.rs  split.rs
src/channel/: metrics.rs  mod.rs  receiver.rs  sender.rs
src/drivers/: metrics.rs  mod.rs  tcp_receiver.rs  udp_receiver.rs
src/metrics/: counter.rs  dashboard.rs  export.rs  jitter.rs  latency.rs  mod.rs  pipeline_metrics.rs  stage_metrics.rs
src/pipeline/: builder.rs  executor.rs  mod.rs  multi_stage.rs  runner.rs  stage_handle.rs
src/sensor/: imu.rs  lidar.rs  mock.rs  mod.rs  traits.rs
src/sinks/: csv_sink.rs  mod.rs  tap_sink.rs  udp_sink.rs  ws_sink.rs
src/stage/: complementary.rs  filter.rs  fusion.rs  kalman.rs  mod.rs  traits.rs  transform.rs
src/zero_copy/: buffer_pool.rs  mod.rs  object_pool.rs  shared_data.rs
static/: dashboard.html
tests/: integration.rs  network.rs  stress_tests.rs
