[package]
name = "sensor-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["huecodes"]
description = "A real-time sensor data pipeline with lock-free data structures for robotics applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/huecodes/sensor-bridge"
homepage = "https://github.com/huecodes/sensor-bridge"
documentation = "https://docs.rs/sensor-bridge"
keywords = ["robotics", "real-time", "sensor", "lock-free", "pipeline"]
categories = ["embedded", "concurrency", "science::robotics"]
exclude = ["docs/**", ".github/**", "assets/**", "scripts/**", "static/**", "demo.tape", "sensor-bridge-demo.gif"]

[lib]
name = "sensor_bridge"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["crossbeam/std", "parking_lot", "hdrhistogram"]
# UDP/TCP ingestion + JSON framing. Requires std.
network = ["std", "dep:tokio", "dep:serde", "dep:serde_json"]
# Full convenience bundle for local development.
full = ["std", "network"]

[dependencies]
# Lock-free data structures and channels
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }

# Fast mutexes for cases where we need them
parking_lot = { version = "0.12", optional = true }

# HDR histogram for accurate latency percentiles
hdrhistogram = { version = "7.5", optional = true }

# Pure-Rust math functions that work in no_std (sqrt, sin_cos, ceil, etc).
libm = "0.2"

# Async network stack for `network` feature.
tokio = { version = "1", default-features = false, features = ["net", "rt-multi-thread", "macros", "sync", "time", "io-util", "signal"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
rand = "0.8"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "channels"
harness = false

[[bench]]
name = "allocations"
harness = false

[[example]]
name = "simple_imu"
path = "examples/simple_imu.rs"

[[example]]
name = "multi_sensor"
path = "examples/multi_sensor.rs"

[[example]]
name = "benchmark_latency"
path = "examples/benchmark_latency.rs"

[[example]]
name = "full_pipeline"
path = "examples/full_pipeline.rs"

[[example]]
name = "metrics_demo"
path = "examples/metrics_demo.rs"

[[example]]
name = "imu_fusion"
path = "examples/imu_fusion.rs"

[[example]]
name = "udp_demo"
path = "examples/udp_demo.rs"
required-features = ["network"]

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "stress_tests"
path = "tests/stress_tests.rs"

[[test]]
name = "network"
path = "tests/network.rs"
required-features = ["network"]

# Tell Cargo that cfg(loom) is expected (set via RUSTFLAGS="--cfg loom" when running loom tests)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
